app.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --font-sans: Geist, system-ui, sans-serif;
  --font-mono: Geist Mono, monospace;
  --font-serif: Georgia, serif;
  --radius: 0.375rem;
  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
  --tracking-normal: var(--tracking-normal);
  --shadow-2xl: var(--shadow-2xl);
  --shadow-xl: var(--shadow-xl);
  --shadow-lg: var(--shadow-lg);
  --shadow-md: var(--shadow-md);
  --shadow: var(--shadow);
  --shadow-sm: var(--shadow-sm);
  --shadow-xs: var(--shadow-xs);
  --shadow-2xs: var(--shadow-2xs);
  --spacing: var(--spacing);
  --letter-spacing: var(--letter-spacing);
  --shadow-offset-y: var(--shadow-offset-y);
  --shadow-offset-x: var(--shadow-offset-x);
  --shadow-spread: var(--shadow-spread);
  --shadow-blur: var(--shadow-blur);
  --shadow-opacity: var(--shadow-opacity);
  --color-shadow-color: var(--shadow-color);
  --radius-2xl: calc(var(--radius) * 1.8);
  --radius-3xl: calc(var(--radius) * 2.2);
  --radius-4xl: calc(var(--radius) * 2.6);
}

:root {
  --radius: 0.375rem;
  --background: oklch(0.9827 0.0027 297.7755);
  --foreground: oklch(0.2081 0.0541 301.0645);
  --card: oklch(0.9654 0.0055 297.7235);
  --card-foreground: oklch(0.2081 0.0541 301.0645);
  --popover: oklch(1.0000 0 0);
  --popover-foreground: oklch(0.2081 0.0541 301.0645);
  --primary: oklch(0.4452 0.1651 298.5908);
  --primary-foreground: oklch(0.9827 0.0027 297.7755);
  --secondary: oklch(0.9325 0.0083 297.6660);
  --secondary-foreground: oklch(0.2346 0.0652 300.7172);
  --muted: oklch(0.9511 0.0041 297.7475);
  --muted-foreground: oklch(0.5318 0.0372 304.0780);
  --accent: oklch(0.9243 0.0230 304.7008);
  --accent-foreground: oklch(0.3148 0.1087 299.2402);
  --destructive: oklch(0.5722 0.0765 56.0706);
  --destructive-foreground: oklch(0.9827 0.0027 297.7755);
  --border: oklch(0.8996 0.0130 304.8446);
  --input: oklch(0.8996 0.0130 304.8446);
  --ring: oklch(0.4452 0.1651 298.5908);
  --chart-1: oklch(0.4452 0.1651 298.5908);
  --chart-2: oklch(0.4195 0.0912 305.8958);
  --chart-3: oklch(0.4832 0.1565 282.5910);
  --chart-4: oklch(0.5722 0.0765 56.0706);
  --chart-5: oklch(0.9181 0.0070 297.6899);
  --sidebar: oklch(0.9741 0.0041 297.7498);
  --sidebar-foreground: oklch(0.2346 0.0652 300.7172);
  --sidebar-primary: oklch(0.4452 0.1651 298.5908);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.9495 0.0062 297.7084);
  --sidebar-accent-foreground: oklch(0.4452 0.1651 298.5908);
  --sidebar-border: oklch(0.9155 0.0105 297.6216);
  --sidebar-ring: oklch(0.4452 0.1651 298.5908);
  --font-sans: Geist, system-ui, sans-serif;
  --font-serif: Georgia, serif;
  --font-mono: Geist Mono, monospace;
  --shadow-color: hsl(265, 20%, 10%);
  --shadow-opacity: 0.05;
  --shadow-blur: 10px;
  --shadow-spread: 0px;
  --shadow-offset-x: 0px;
  --shadow-offset-y: 2px;
  --letter-spacing: -0.01em;
  --spacing: 0.25rem;
  --shadow-2xs: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.03);
  --shadow-xs: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.03);
  --shadow-sm: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.05), 0px 1px 2px -1px hsl(265, 20%, 10% / 0.05);
  --shadow: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.05), 0px 1px 2px -1px hsl(265, 20%, 10% / 0.05);
  --shadow-md: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.05), 0px 2px 4px -1px hsl(265, 20%, 10% / 0.05);
  --shadow-lg: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.05), 0px 4px 6px -1px hsl(265, 20%, 10% / 0.05);
  --shadow-xl: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.05), 0px 8px 10px -1px hsl(265, 20%, 10% / 0.05);
  --shadow-2xl: 0px 2px 10px 0px hsl(265, 20%, 10% / 0.13);
  --tracking-normal: 0.01em;
}

.dark {
  --background: oklch(0.1366 0.0146 304.7135);
  --foreground: oklch(0.9654 0.0055 297.7235);
  --card: oklch(0.1680 0.0230 303.1178);
  --card-foreground: oklch(0.9654 0.0055 297.7235);
  --popover: oklch(0.1580 0.0200 303.2649);
  --popover-foreground: oklch(0.9654 0.0055 297.7235);
  --primary: oklch(0.5446 0.1877 299.2548);
  --primary-foreground: oklch(0.1366 0.0146 304.7135);
  --secondary: oklch(0.2229 0.0245 303.5072);
  --secondary-foreground: oklch(0.9654 0.0055 297.7235);
  --muted: oklch(0.2030 0.0209 303.6064);
  --muted-foreground: oklch(0.7074 0.0269 304.5193);
  --accent: oklch(0.2375 0.0585 301.3226);
  --accent-foreground: oklch(0.8473 0.0606 304.0545);
  --destructive: oklch(0.4229 0.0652 47.0092);
  --destructive-foreground: oklch(0.9654 0.0055 297.7235);
  --border: oklch(0.2229 0.0245 303.5072);
  --input: oklch(0.2229 0.0245 303.5072);
  --ring: oklch(0.5446 0.1877 299.2548);
  --chart-1: oklch(0.5446 0.1877 299.2548);
  --chart-2: oklch(0.6733 0.1119 310.3458);
  --chart-3: oklch(0.4439 0.0987 293.4800);
  --chart-4: oklch(0.4229 0.0652 47.0092);
  --chart-5: oklch(0.2443 0.0444 302.4225);
  --sidebar: oklch(0.1239 0.0128 305.5976);
  --sidebar-foreground: oklch(0.9654 0.0055 297.7235);
  --sidebar-primary: oklch(0.5446 0.1877 299.2548);
  --sidebar-primary-foreground: oklch(0.1366 0.0146 304.7135);
  --sidebar-accent: oklch(0.2196 0.0306 303.0734);
  --sidebar-accent-foreground: oklch(0.8473 0.0606 304.0545);
  --sidebar-border: oklch(0.2001 0.0262 303.2041);
  --sidebar-ring: oklch(0.5446 0.1877 299.2548);
  --radius: 0.375rem;
  --font-sans: Geist, system-ui, sans-serif;
  --font-serif: Georgia, serif;
  --font-mono: Geist Mono, monospace;
  --shadow-color: hsl(0, 0%, 0%);
  --shadow-opacity: 0.15;
  --shadow-blur: 12px;
  --shadow-spread: 0px;
  --shadow-offset-x: 0px;
  --shadow-offset-y: 4px;
  --letter-spacing: 0.01em;
  --spacing: 0.25rem;
  --shadow-2xs: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.07);
  --shadow-xs: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.07);
  --shadow-sm: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.15), 0px 1px 2px -1px hsl(0, 0%, 0% / 0.15);
  --shadow: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.15), 0px 1px 2px -1px hsl(0, 0%, 0% / 0.15);
  --shadow-md: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.15), 0px 2px 4px -1px hsl(0, 0%, 0% / 0.15);
  --shadow-lg: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.15), 0px 4px 6px -1px hsl(0, 0%, 0% / 0.15);
  --shadow-xl: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.15), 0px 8px 10px -1px hsl(0, 0%, 0% / 0.15);
  --shadow-2xl: 0px 4px 12px 0px hsl(0, 0%, 0% / 0.38);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
    letter-spacing: var(--tracking-normal);
  }
}

